--- a/WebApiUtilities.csproj
+++ b/WebApiUtilities.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <PackageId>WebApiUtilities</PackageId>
+    <PackageId>SakurWebApiUtilities</PackageId>
     <Version>1.0.0</Version>
     <Authors>Adam Tovatt</Authors>
     <Company>Sakur</Company>
