--- a/WebApiUtilities.csproj
+++ b/WebApiUtilities.csproj
@@ -1,17 +1,23 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Nullable>enable</Nullable>
     <TargetFramework>net8.0</TargetFramework>
     <PackageId>SakurWebApiUtilities</PackageId>
     <Version>1.1.0</Version>
     <Authors>Adam Tovatt</Authors>
     <Company>Sakur</Company>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <RepositoryUrl>https://github.com/AdamTovatt/WebApiUtilities</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/AdamTovatt/WebApiUtilities</PackageProjectUrl>
+    <Title>SakurWebApiUtilities</Title>
+    <Description>Tiny nuget package to help with web api development in asp.net core.</Description>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Npgsql" Version="8.0.3" />
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
 </Project>
