--- a/WebApiUtilities.csproj
+++ b/WebApiUtilities.csproj
@@ -4,7 +4,7 @@
     <Nullable>enable</Nullable>
     <TargetFramework>net8.0</TargetFramework>
     <PackageId>SakurWebApiUtilities</PackageId>
-    <Version>1.1.0</Version>
+    <Version>1.1.1</Version>
     <Authors>Adam Tovatt</Authors>
     <Company>Sakur</Company>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
@@ -16,6 +16,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
     <PackageReference Include="Npgsql" Version="8.0.3" />
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
