--- a/WebApiUtilities.csproj
+++ b/WebApiUtilities.csproj
@@ -13,12 +13,20 @@
     <PackageProjectUrl>https://github.com/AdamTovatt/WebApiUtilities</PackageProjectUrl>
     <Title>SakurWebApiUtilities</Title>
     <Description>Tiny nuget package to help with web api development in asp.net core.</Description>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
     <PackageReference Include="Npgsql" Version="8.0.3" />
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
