--- a/WebApiUtilities.csproj
+++ b/WebApiUtilities.csproj
@@ -4,7 +4,7 @@
     <Nullable>enable</Nullable>
     <TargetFramework>net8.0</TargetFramework>
     <PackageId>SakurWebApiUtilities</PackageId>
-    <Version>1.1.1</Version>
+    <Version>1.1.2</Version>
     <Authors>Adam Tovatt</Authors>
     <Company>Sakur</Company>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
@@ -15,6 +15,7 @@
     <Description>Tiny nuget package to help with web api development in asp.net core.</Description>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageIcon>Icon.png</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -24,6 +25,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Icon.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
     <None Update="README.md">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
