--- a/WebApiUtilities.csproj
+++ b/WebApiUtilities.csproj
@@ -4,7 +4,7 @@
     <Nullable>enable</Nullable>
     <TargetFramework>net8.0</TargetFramework>
     <PackageId>SakurWebApiUtilities</PackageId>
-    <Version>1.6.2</Version>
+    <Version>1.7.0</Version>
     <Authors>Adam Tovatt</Authors>
     <Company>Sakur</Company>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
@@ -18,6 +18,7 @@
     <PackageIcon>Icon.png</PackageIcon>
     <IncludeSymbols>True</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <PackageTags>asp.net; core; web-api; api: web; utilities; auth; task scheduling; background task</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
